--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
       <address class="address">
         <ul class="list">
           <li class="item-addres">
-            <a class="list-a link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="list-b link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li class="item-addres">
-            <a class="list-a link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="list-b link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
